--- a/quickstart/app/heroes.component.html
+++ b/quickstart/app/heroes.component.html
@@ -3,8 +3,15 @@
 <ul class="heroes">
     <li *ngFor="let hero of heroes" [class.selected]="hero === selectedHero" (click)="onSelect(hero)">
         <span class="badge">{{hero.id}}</span> {{hero.name}}
+        <button class="delete" (click)="delete(hero); $event.stopPropagation()">x</button>
     </li>
 </ul>
+<div>
+    <label>Hero name:</label> <input #heroName />
+    <button (click)="add(heroName.value); heroName.value=''">
+    Add
+  </button>
+</div>
 <div *ngIf="selectedHero">
     <h2>
         {{selectedHero.name | uppercase}} is my hero
